* Errors and warnings show in Maya's main window instead of the Output Window.

=Version 0.3.1=

* Sped up loading of skinned meshes significantly.  These now load almost as
  fast as NIF files without skins.
* Included Pre-release Niflib code in source archive to make it easier for
  people to compile the plug-in themselves.
  
=Version 0.4=

* Added experimental export support.

=Version 0.5=
  
* Organized options into Common, Import, and Export groups.
* Added new options:  Attempt to Find Original Bind Pose, Try to Use Original
  Normals, Ignore Ambient Color, and Export White Ambient if Texture is
  Present.
* Fixed problem with import of glow textures.  Texture index was off by one
  due to being incremented at the wrong time.
* Skin clusters should now always be properly detected no matter how distantly
  they're connected to the mesh they deform.
* A NiAlphaProperty is now created on export if the base texture has any
  transparency specified in its alpha channel.
* Glow textures are now supported for export.
* Removed warning for transparency texture.  This was caused by the alpha
  channel of the base map being connected to transparency as it should be.
* Changed all cout statements to use the out file stream so they would not
  write to the Maya Output window.
* Only NiNodes that are skin influences are now imported as IKJoints.
  Previously nodes with the word "Bip" in the name were also made into joints
  but this was incorrect.
* Now import ambient as well.  It looks bad e renders, but not importing it
  results in exports that do not match the original file.
* Vertex colors are now exported.
* Maya's default objects (such as the top, front, side, and persp camera) are
  no longer exported.
* Exported the name of the FileTexture node in the resulting NiSourceTexture
  object.
* Paths of textures are now fixed by removing any part of the beginning that
  matches the texture path specified in the options.